Update avatar image source to local file

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                      1. Збережіть фото (наприклад, avatar.jpg) у папку з цим файлом.
                      2. Замініть посилання нижче на: src="avatar.jpg" 
                 -->
-                <img src="https://pbs.twimg.com/profile_images/2001369651528216577/tO-WSxb4_400x400.jpg" alt="Avatar" class="hero-avatar">
+                <img src="avatar.jpg" alt="Avatar" class="hero-avatar">
             </div>
         </section>
 
