Update avatar image source and clean comments

--- a/index.html
+++ b/index.html
@@ -292,14 +292,12 @@
 
         /* --- ABOUT --- */
         .about-text {
-            /* ОНОВЛЕНО: Вирівнювання по ширині для структурованості */
             text-align: justify;
             font-size: 1.1rem;
             color: #cbd5e1;
             line-height: 1.8;
         }
         
-        /* ОНОВЛЕНО: Чіткий відступ між абзацами */
         .about-text p {
             margin-bottom: 25px;
         }
@@ -444,11 +442,8 @@
                 </a>
             </div>
             <div class="hero-image-wrap">
-                <!-- ВАЖЛИВО: Щоб поставити своє якісне фото:
-                     1. Збережіть фото (наприклад, avatar.jpg) у папку з цим файлом.
-                     2. Замініть посилання нижче на: src="avatar.jpg" 
-                -->
-                <img src="avatar.jpg" alt="Avatar" class="hero-avatar">
+                <!-- ОНОВЛЕНО: Тепер шукає файл avatar.png -->
+                <img src="avatar.png" alt="Avatar" class="hero-avatar">
             </div>
         </section>
 
